# me_chat_server

./: .gitignore  .woodpecker.yml  Cargo.toml  DockerFile  Dockerfile  README.md  chat.db  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 20240101000000_init.sql  20240101000001_add_friends_and_groups.sql
src/: main.rs  models.rs
static/: index.html  login.html  register.html
