[package]
name = "me_chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
md-5 = "0.10"
hex = "0.4"
chrono = "0.4"
rocket_ws = "0.1.1"
async-stream = "0.3"
include_dir = "0.7"
