[package]
name = "me_chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
rocket_ws = "0.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = { version = "1.44", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
hex = "0.4"
include_dir = "0.7"
env_logger = "0.11"
futures = "0.3"
