[package]
name = "me_chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
rocket_ws = "0.1.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "migrate"] }
tokio = { version = "1.44", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
hex = "0.4"
include_dir = "0.7"
env_logger = "0.11"
futures = "0.3"
uuid = { version = "1.16", features = ["v4"] }
mime_guess = "2.0"
jsonwebtoken = "8.3"
